[project]
name = "ih-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "infrahub-sdk[all,ctl]~=1.13.0",
    "ipdb>=0.13.13",
]

[tool.uv.sources]
infrahub-sdk = { git = "https://github.com/opsmill/infrahub-sdk-python", rev = "develop" }
